--- a/FoodCollector/he-IL.lproj/Localizable.strings
+++ b/FoodCollector/he-IL.lproj/Localizable.strings
@@ -150,7 +150,7 @@
 "Hi,(br)What would you like to share?" = "הי,(br)מה תרצו לשתף?";
 
 /* report button title */
-"I Took All" = "לקחתי הכל";
+"I Took All" = "אספתי הכל";
 
 /* The title of a user report which means that he took all the food */
 "I Took all" = "אספתי הכל";
