Changed translation of Back to אחורה to match Apple's Hebrew translation.

--- a/FoodCollector/he-IL.lproj/AboutUsSB.strings
+++ b/FoodCollector/he-IL.lproj/AboutUsSB.strings
@@ -2,7 +2,7 @@
 "bvu-HQ-2Rj.text" = "Foodonet";
 
 /* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "eKJ-NB-X8w"; */
-"eKJ-NB-X8w.title" = "חזרה";
+"eKJ-NB-X8w.title" = "אחורה";
 
 /* Class = "UILabel"; text = "v 1.0.9"; ObjectID = "fUr-VL-LbD"; */
 "fUr-VL-LbD.text" = "v 1.0.9";
