--- a/FoodCollector/he-IL.lproj/Main.strings
+++ b/FoodCollector/he-IL.lproj/Main.strings
@@ -143,7 +143,7 @@
 "eh7-cR-dRz.title" = "השיתופים שלי";
 
 /* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "fqk-Lk-drl"; */
-"fqk-Lk-drl.title" = "חזרה";
+"fqk-Lk-drl.title" = "אחורה";
 
 /* Class = "UIViewController"; title = "Select Address"; ObjectID = "hdu-mN-4y2"; */
 "hdu-mN-4y2.title" = "בחר כתובת";
