--- a/FoodCollector/he-IL.lproj/Settings.strings
+++ b/FoodCollector/he-IL.lproj/Settings.strings
@@ -44,5 +44,5 @@
 "mua-e4-tjH.normalTitle" = "עריכה";
 
 /* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "yLc-2k-jIS"; */
-"yLc-2k-jIS.title" = "חזרה";
+"yLc-2k-jIS.title" = "אחורה";
 
