--- a/FoodCollector/he-IL.lproj/Groups.strings
+++ b/FoodCollector/he-IL.lproj/Groups.strings
@@ -10,6 +10,9 @@
 /* Class = "UILabel"; text = "Label"; ObjectID = "L7b-ba-bJE"; */
 "L7b-ba-bJE.text" = "Label";
 
+/* Class = "UIButton"; normalTitle = "Leave Group"; ObjectID = "R8d-2b-elc"; */
+"R8d-2b-elc.normalTitle" = "עזוב קבוצה";
+
 /* Class = "UILabel"; text = "Add Group Member"; ObjectID = "VQ6-3b-b2l"; */
 "VQ6-3b-b2l.text" = "הוספת חבר לקבוצה";
 
