Fixed a typo in the word אחורה

--- a/FoodCollector/he-IL.lproj/Localizable.strings
+++ b/FoodCollector/he-IL.lproj/Localizable.strings
@@ -51,7 +51,7 @@
 "Are you sure?" = "האם אתם בטוחים?";
 
 /* Title for a navigation button */
-"Back" = "אחרוה";
+"Back" = "אחורה";
 
 /* Title for a list of people registered to this event */
 "Call collector:" = "התקשר לאוסף:";
