Translated the string "Profile Settings" into Hebrew.

--- a/FoodCollector/he-IL.lproj/Localizable.strings
+++ b/FoodCollector/he-IL.lproj/Localizable.strings
@@ -256,7 +256,7 @@
 "Options" = "אפשרויות";
 
 /* settings cell title */
-"Personal Profile" = "פרופיל אישי";
+"Profile Settings" = "הגדרות פרופיל";
 
 /* Collector home page navigation bar title
    Collector map title */
