--- a/FoodCollector/he-IL.lproj/PublicationDetailsDetailsTVCell.strings
+++ b/FoodCollector/he-IL.lproj/PublicationDetailsDetailsTVCell.strings
@@ -4,3 +4,6 @@
 /* Class = "UILabel"; text = "Label"; ObjectID = "Pbw-Hs-Toi"; */
 "Pbw-Hs-Toi.text" = "Label";
 
+/* Class = "UILabel"; text = "4.5"; ObjectID = "gJF-fb-mvT"; */
+"gJF-fb-mvT.text" = "4.5";
+
