Translated the info.plist string including the UIApplicationShortcutItems

--- a/FoodCollector/he-IL.lproj/InfoPlist.strings
+++ b/FoodCollector/he-IL.lproj/InfoPlist.strings
@@ -7,3 +7,20 @@
 /* (No Commment) */
 "CFBundleShortVersionString" = "1.0.9";
 
+/* Display a message when arriving to pickup location */
+"NSLocationUsageDescription" = "הצגת הודעה בזמן הגעה לנקודת שיתוף"
+
+/* Display a message when arriving to pickup location */
+"NSLocationWhenInUseUsageDescription" = "הצגת הודעה בזמן הגעה לנקודת שיתוף"
+
+/* What's Near */
+"UIApplicationShortcutItemTitle" = "מה חדש בסביבה"
+
+/* Events near you */
+"UIApplicationShortcutItemSubtitle" = "שיתופים בקרתך"
+
+/* Post Event */
+"UIApplicationShortcutItemTitle" = "פירסום שיתוף"
+
+/* Share something */
+"UIApplicationShortcutItemSubtitle" = "שתפו משהו"
