--- a/FoodCollector/he-IL.lproj/ActivityLog.strings
+++ b/FoodCollector/he-IL.lproj/ActivityLog.strings
@@ -4,8 +4,8 @@
 /* Class = "UILabel"; text = "Label"; ObjectID = "19t-SH-Wll"; */
 "19t-SH-Wll.text" = "Label";
 
-/* Class = "UIBarButtonItem"; title = "Done"; ObjectID = "WzQ-3g-mH1"; */
-"WzQ-3g-mH1.title" = "בוצע";
+/* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "WzQ-3g-mH1"; */
+"WzQ-3g-mH1.title" = "אחורה";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "Yfn-eU-pxH"; */
 "Yfn-eU-pxH.text" = "Label";
