--- a/FoodCollector/he-IL.lproj/Main.strings
+++ b/FoodCollector/he-IL.lproj/Main.strings
@@ -10,6 +10,9 @@
 /* Class = "UILabel"; text = "Label"; ObjectID = "2Oa-A1-9fz"; */
 "2Oa-A1-9fz.text" = "Label";
 
+/* Class = "UILabel"; text = "Label"; ObjectID = "3MD-dr-XON"; */
+"3MD-dr-XON.text" = "Label";
+
 /* Class = "UILabel"; text = "Label"; ObjectID = "3Zb-jF-K2K"; */
 "3Zb-jF-K2K.text" = "Label";
 
