changed first screen initial text (disrupting the food chain)

--- a/FoodCollector/he-IL.lproj/Login.strings
+++ b/FoodCollector/he-IL.lproj/Login.strings
@@ -10,8 +10,8 @@
 /* Class = "UIButton"; normalTitle = "Continue without Registration"; ObjectID = "FzY-7R-UwU"; */
 "FzY-7R-UwU.normalTitle" = "המשך ללא רישום";
 
-/* Class = "UILabel"; text = "Sharing food changing society"; ObjectID = "LZn-e1-m8L"; */
-"LZn-e1-m8L.text" = "משתפים אוכל משנים את החברה";
+/* Class = "UILabel"; text = "Disrupting the Food Chain"; ObjectID = "LZn-e1-m8L"; */
+"LZn-e1-m8L.text" = "ממציאים את שרשרת המזון";
 
 /* Class = "UILabel"; text = "—  Sign in with  —"; ObjectID = "RxJ-SW-BD5"; */
 "RxJ-SW-BD5.text" = "— הכנס בעזרת —";
