--- a/FoodCollector/he-IL.lproj/Localizable.strings
+++ b/FoodCollector/he-IL.lproj/Localizable.strings
@@ -150,7 +150,7 @@
 "Facebook App is not installed on your device." = "אפליקציית Facebook לא מותקנת במכשיר זה.";
 
 /* about us text */
-"Foodonet is a social initiative aiming to reduce food waste. Foodonet develops a mobile platform that allows people to easily donate spare food to one another. Foodonet is connecting food producers directly to customers with no mediators and cutting food costs" = "U200fFoodonet הינה יוזמה חברתית השמה לעצמה כמטרה לצמצם בזבוז מזון. Foodonet מפתחת פלטפורמה ניידת המאפשרת לאנשים לתרום בקלות עודפי מזון האחד לשני. Foodonet מחברת בין יצרני מזון ישירות לצרכנים ללא מתווך ביניים ומורידה עלויות של מזון.";
+"Foodonet is a social initiative aiming to reduce food waste. Foodonet develops a mobile platform that allows people to easily donate spare food to one another. Foodonet is connecting food producers directly to customers with no mediators and cutting food costs" = "\U200fFoodonet הינה יוזמה חברתית השמה לעצמה כמטרה לצמצם בזבוז מזון. Foodonet מפתחת פלטפורמה ניידת המאפשרת לאנשים לתרום בקלות עודפי מזון האחד לשני. Foodonet מחברת בין יצרני מזון ישירות לצרכנים ללא מתווך ביניים ומורידה עלויות של מזון.";
 
 /* report button title */
 "Found Nothing There" = "לא מצאתי כלום";
